Add missing libraries and images

--- a/semester_2/physics_1.tex
+++ b/semester_2/physics_1.tex
@@ -1,9 +1,11 @@
-\documentclass[12pt]{extarticle}
+\documentclass[10pt]{extarticle}
 \title{Physics 1 Notes}
 \author{Giacomo Ellero}
 \date{Semester 2 - 2023/2024}
 
 \usepackage{preamble}
+\usepackage{siunitx}
+\usetikzlibrary{patterns,decorations.pathreplacing,calligraphy}
    
 \begin{document}
 
