--- a/semester_2/preamble.sty
+++ b/semester_2/preamble.sty
@@ -29,6 +29,14 @@
 \RequirePackage{tikz} % for drawings
 \RequirePackage{enumitem} % for custom lists
 \RequirePackage{fancyhdr} % for headers
+\RequirePackage{hyperref} % for hyperlinks
+
+\hypersetup{
+    colorlinks=true,
+    linkcolor=green,
+    urlcolor=blue,
+}
+\urlstyle{same}
 
 \newcommand{\C}{\mathbb{C}}
 \newcommand{\R}{\mathbb{R}}
